subiendo cambios nuevos para telefónica merge enterprise

--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -175,6 +175,7 @@ es:
     view_all_courses: 'Ver todos los cursos disponibles'
     start: 'Inicio'
     profile: 'Perfil'
+    propiety: 'Red'
     account_settings: 'Configuración de la cuenta'
 
   courses:
