--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -26,8 +26,8 @@ es:
       total_comments: 'Total de comentarios'
       total_comments_assignments: 'Comentarios en Contenidos'
       total_comments_discussions: 'Comentarios en discusiones'
-      total_comments_user_walls: 'En muro de usuarios'
-      total_comments_course_walls: 'En muro de Campañas'
+      total_comments_user_walls: 'En Commentarios de usuarios'
+      total_comments_course_walls: 'En Commentarios de Campañas'
 
 
   confirm_delete: ¿Estas Seguro?
@@ -196,7 +196,7 @@ es:
     courses: 'Campañas'
     add_asset: Añadir archivo
     course_menu:
-      wall: 'Muro'
+      wall: 'Commentarios'
       new_discussion: 'Crear discusión'
       discussions: 'Discusiones'
       requests: 'Solicitudes'
@@ -247,7 +247,7 @@ es:
     index:
       title: Todos los Campañas disponibles
     wall:
-      header: Muro
+      header: Commentarios
     assignments:
       create_assignment: 'Crear Contenido'
       assignments: 'Contenidos'
@@ -359,7 +359,7 @@ es:
     birth_date: 'Fecha de nacimiento'
     occupation: 'Ocupación'
     social_networks: 'Redes sociales'
-    wall: 'Muro'
+    wall: 'Commentarios'
 
   discussions:
     title: 'Discusiones'
@@ -478,16 +478,16 @@ es:
     discussion_added: Se ha creado la discusión
     has_posted_a_comment_on_comment: ha comentado en uno de tus comentarios
     has_posted_a_comment_on_discussion: ha comentado en la discusión
-    has_posted_a_comment_on_user: ha comentado en tu muro
-    has_posted_a_comment_on_course: ha comentado en el muro del Campaña
+    has_posted_a_comment_on_user: ha comentado en tu Commentarios
+    has_posted_a_comment_on_course: ha comentado en el Commentarios del Campaña
     
   user_mailer:
     new_comment_on_user:
-      subject: Nuevo comentario en tu muro
+      subject: Nuevo comentario en tu Commentarios
     new_comment_on_discussion:
       subject: Nuevo comentario en una de tus discusiones
     new_comment_on_course:
-      subject: Nuevo comentario en el muro de uno de tus Campañas
+      subject: Nuevo comentario en el Commentarios de uno de tus Campañas
     new_comment_on_comment:
       subject: Nueva respuesta sobre tu comentario
     new_discussion:
