--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -23,11 +23,11 @@ es:
       total_assignments: 'Total de Contenidos'
       total_surveys: 'Total de cuestionarios'
       total_discussions: 'Total de discusiones'
-      total_comments: 'Total de comentarios'
+      total_comments: 'Total de Comentarios'
       total_comments_assignments: 'Comentarios en Contenidos'
       total_comments_discussions: 'Comentarios en discusiones'
-      total_comments_user_walls: 'En comentarios de usuarios'
-      total_comments_course_walls: 'En comentarios de Campañas'
+      total_comments_user_walls: 'En Comentarios de usuarios'
+      total_comments_course_walls: 'En Comentarios de Campañas'
 
 
   confirm_delete: ¿Estas Seguro?
@@ -196,7 +196,7 @@ es:
     courses: 'Campañas'
     add_asset: Añadir archivo
     course_menu:
-      wall: 'comentarios'
+      wall: 'Comentarios'
       new_discussion: 'Crear discusión'
       discussions: 'Discusiones'
       requests: 'Solicitudes'
@@ -247,7 +247,7 @@ es:
     index:
       title: Todos los Campañas disponibles
     wall:
-      header: comentarios
+      header: Comentarios
     assignments:
       create_assignment: 'Crear Contenido'
       assignments: 'Contenidos'
@@ -359,7 +359,7 @@ es:
     birth_date: 'Fecha de nacimiento'
     occupation: 'Ocupación'
     social_networks: 'Redes sociales'
-    wall: 'comentarios'
+    wall: 'Comentarios'
 
   discussions:
     title: 'Discusiones'
@@ -476,18 +476,18 @@ es:
     survey_added: Se ha creado el cuestionario
     users_uploaded: Se ha terminado de crear usuarios mediante archivo CSV
     discussion_added: Se ha creado la discusión
-    has_posted_a_comment_on_comment: ha comentado en uno de tus comentarios
+    has_posted_a_comment_on_comment: ha comentado en uno de tus Comentarios
     has_posted_a_comment_on_discussion: ha comentado en la discusión
-    has_posted_a_comment_on_user: ha comentado en tu comentarios
-    has_posted_a_comment_on_course: ha comentado en el comentarios del Campaña
+    has_posted_a_comment_on_user: ha comentado en tu Comentarios
+    has_posted_a_comment_on_course: ha comentado en el Comentarios del Campaña
     
   user_mailer:
     new_comment_on_user:
-      subject: Nuevo comentario en tu comentarios
+      subject: Nuevo comentario en tu Comentarios
     new_comment_on_discussion:
       subject: Nuevo comentario en una de tus discusiones
     new_comment_on_course:
-      subject: Nuevo comentario en el comentarios de uno de tus Campañas
+      subject: Nuevo comentario en el Comentarios de uno de tus Campañas
     new_comment_on_comment:
       subject: Nueva respuesta sobre tu comentario
     new_discussion:
