subiendo cambios de estilos

--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -176,6 +176,7 @@ es:
     start: 'Inicio'
     profile: 'Perfil'
     propiety: 'Red'
+    panel: 'Panel'
     account_settings: 'Configuración de la cuenta'
 
   courses:
