--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -191,8 +191,7 @@ es:
     discussion_updated: 'Discusión Actualizada'
     wrong_network: 'Red equivocada'
     assignment_updated: 'Tarea actualizada'
-    user_registration_accepted: 'Maestro autorizado correctamente'
-    user_created: 'Bienvenido a la red de Telefónica has recibido un mail de confirmación para activar tu cuenta!'
+    user_registration_accepted: 'Usuario autorizado correctamente'
     assignment_deleted: 'Tarea eliminada'
 
   errors:
