subiendo modificaciones en lenguaje y video

--- a/config/locales/devise.es.yml
+++ b/config/locales/devise.es.yml
@@ -43,6 +43,10 @@ es:
         inactive: 'inactiva'
         unconfirmed: 'sin confirmar'
         locked: 'bloqueada'
+      student_user:
+          signed_up_but_unconfirmed: 'Bienvenido a la red de Cúrsame tu usuario ha sido creado, se te ha enviado un mail de confirmación para accesar!'
+      teacher_user:
+          signed_up_but_unconfirmed: 'Bienvenido a la red de Cúrsame tu usuario ha sido creado, se te ha enviado un mail de confirmación, un administrador se encargará de inmediato de validarte!'
     unlocks:
       send_instructions: 'Recibirás un correo electrónico con instrucciones sobre cómo desbloquear tu cuenta en unos minutos.'
       unlocked: 'Tu cuenta fue desbloqueada con éxito, has sido ingresado al sistema.'
