translation key for admin

--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -408,6 +408,7 @@ es:
         teacher: Maestro
         student: Estudiante
         supervisor: Administrador
+        admin: Administrador de sistema
         update: Actualizar
         change_role: Cambiar rol
         destroy: Eliminar
